welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: ')' expected but ';' found.
def motif(c:Color; d:Color){
                 ^FlowerPot:3: error: ';' expected but ')' found.
def motif(c:Color; d:Color){
                          ^FlowerPot:22: error: ';' expected but ')' found.
motif(Color.RED; Color.YELLOW) 
                             ^